--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,14 +1,14 @@
 * {
   overflow: hidden;
-
+  box-sizing: border-box;
 }
+
 body {
   font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
     'Arial', sans-serif;
   padding: 0;
   margin: 0;
   height: 100vh;
-  box-sizing: border-box;
 }
 
 .nav {
@@ -31,4 +31,5 @@ body {
   width: 100%;
   background-color: #f5f5f5;
   text-align: center;
+  padding: 16px;
 }
