--- a/pages/styles.css
+++ b/pages/styles.css
@@ -33,3 +33,19 @@ body {
   text-align: center;
   padding: 16px;
 }
+
+.wallet-connect {
+  background: rgb(236, 120, 78);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #444;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
+}
+
+.wallet-connect:hover {
+  background: red;
+  scale: 1.1;
+}
