--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,7 +1,7 @@
-* {
+/* * {
   overflow: hidden;
   box-sizing: border-box;
-}
+} */
 
 body {
   font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
